<resources>
    <string name="app_name">IMCyTODOList</string>
    <string name="male">Hombre</string>
    <string name="female">Mujer</string>
    <string name="height">Altura</string>
    <string name="age">Edad</string>
    <string name="weight">Peso</string>
    <string name="calculate">Calcular</string>
    <string name="result">Resultado</string>
    <string name="recalculate">Recalcular\n</string>

    <string name="title_bajo_peso">Bajo Peso</string>
    <string name="description_bajo_peso">Tu IMC indica que estás por debajo del peso recomendado. Es importante que consultes a un profesional de la salud para evaluar tu dieta y estilo de vida. ¡Cuida tu nutrición!</string>

    <string name="title_peso_normal">Peso Saludable</string>
    <string name="description_peso_normal">¡Felicidades! Tu IMC está dentro del rango considerado saludable. Sigue manteniendo una dieta equilibrada y realiza actividad física regularmente para mantenerte en forma.</string>

    <string name="title_sobrepeso">Sobrepeso</string>
    <string name="description_sobrepeso">Tu IMC indica que tienes sobrepeso. Te recomendamos adoptar hábitos más saludables, como una dieta balanceada y ejercicio regular. Consulta a un profesional para un plan personalizado.</string>

    <string name="title_obesidad">Obesidad</string>
    <string name="description_obesidad">Tu IMC sugiere que tienes obesidad. Es importante que busques ayuda médica para evaluar tu salud y recibir orientación sobre cambios en tu estilo de vida. ¡Tu bienestar es lo primero!</string>

    <string name="error">Error</string>
    <string name="description_error">Ha ocurrido un error al calcular tu IMC. Por favor, verifica los datos ingresados y vuelve a intentarlo. Si el problema persiste, contacta al soporte técnico.</string>

    <string name="lista_title">MIS TAREAS</string>
    <string name="lista_categories">Categorías:</string>
    <string name="lista_tasks">Tareas:</string>
    <string name="lista_dialog_add_task">Añade la tarea</string>
    <string name="lista_dialog_category_trabajo">Trabajo</string>
    <string name="lista_dialog_category_otros">Otros</string>
    <string name="lista_dialog_category_personal">Personal</string>
    <string name="lista_dialog_add_task_button">Crear tarea</string>
    <string name="lista_dialog_category_estudio">Estudio</string>
    <string name="lista_dialog_category_hogar">Hogar</string>
    <string name="lista_dialog_category_salud">Salud</string>
    <string name="app_fin_de_curso">App Fin de Curso</string>
    <string name="abel_moro_2_dam">Abel Moro - 2º DAM</string>
    <string name="calculadora_de_imc">Calculadora de IMC</string>
    <string name="lista_de_tareas">Lista de tareas</string>
    <string name="abrir_la_otra_app">Abrir la otra app</string>
    <string name="salir">Salir</string>
</resources>